Fix for blog post list title not wrapping by word

--- a/less/typography.less
+++ b/less/typography.less
@@ -47,8 +47,8 @@ a {
 	color: @color__link--text;
 	overflow-wrap: break-word;
 	word-wrap: break-word;
-	-ms-word-break: break-all;
-	word-break: break-all;
+	-ms-word-break: break-word;
+	word-break: break-word;
 	word-break: break-word;
 
     &:hover {
